--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                 <p></p>
             </div>
             <div class=" col-lg-6 col-md-8 col-sm-12 m-auto texto-video3 ">
-                <h2>Aprobado el proyecto <i class="fa-regular fa-thumbs-up"></i>, tenés tu web online.<br> Asi de fácil</h2>
+                <h2>Aprobado el proyecto <i class="fa-regular fa-thumbs-up"></i>, tenés tu web online. Asi de fácil</h2>
                 <p></p>
             </div>
            
