cambios de acuerdo a figma- navbar stiky, banner de logos, seccion Como trabajamos

--- a/src/index.html
+++ b/src/index.html
@@ -25,23 +25,23 @@
   <script src="../utils/funciones.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
-    <img src="../img/sghorizontal.png"  height="40"  alt="sgw Logo" >
-  </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse  " id="navbarNavAltMarkup" >
-            <div class="navbar-nav dflex " >
-                <a class="nav-item nav-link" href="#diseno" id="enlaceDiseno">Diseño Web</a>
-                <a class="nav-item nav-link" href="#identidad" id="enlaceIdentidad">Identidad Visual</a>
-                <a class="nav-item nav-link" href="#grafica" id="enlaceGrafica">Diseño Gráfico</a>
-                <button class="btn btn-light border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">CONTACTANOS!</button>
 
-            </div>
-        </div>
-       
+<nav class="navbar navbar-light bg-light justify-content-between sticky-top">
+  <a class="navbar-brand" href="index.html">
+    <img class="navlogo" src="../img/sghorizontal.png"    alt="sgw Logo" > 
+  </a>
+  <form class="form-inline">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+      <div class="collapse navbar-collapse divnav  " id="navbarNavAltMarkup" >
+          <div class="navbar-nav dflex  " >
+              <a class="nav-item nav-link " href="#diseno" id="enlaceDiseno">Diseño Web</a>
+              <a class="nav-item nav-link " href="#identidad" id="enlaceIdentidad">Identidad Visual</a>
+              <a class="nav-item nav-link " href="#grafica" id="enlaceGrafica">Diseño Gráfico</a>
+              <button class="btn btn-light border-0 bg-transparent " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">CONTACTANOS!</button>
+          </div>
+      </div>  </form>
 </nav>
 <div class="container-fluid " >
     <div class="row ">
@@ -79,7 +79,40 @@
         </div>
         
     </div>
-    <div class="container " >
+  <div class="container-fluid my-3">
+    <div class="row">
+      <div class="col-lg-8 col-md-6 col-sm-12">
+        <img class="w-100" src="../img/ideas.jpg"    alt="" > 
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <h3>Cómo trabajamos?</h3>
+        <p class="m-auto">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet velit ratione expedita accusantium rem, vel voluptate magni quaerat deserunt nulla consequatur sequi nostrum optio praesentium quidem dolor reiciendis illum sapiente maxime. Ut rerum, nihil quia iste ipsam esse ad laboriosam perferendis expedita reprehenderit repellendus recusandae laborum facilis. Quia, dolor debitis hic ex nulla enim unde quidem velit earum cumque ullam ipsam provident asperiores perferendis! Rem tempore veritatis iste voluptates assumenda quam totam ea eligendi reiciendis. Cum in saepe tempore debitis.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+  <div class="container-fluid d-flex justify-content-center align-items-center">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center">
+        <img class=" " src="../img/branding-banner.png" alt="">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center">
+        <img class="" src="../img/branding-banner.png" alt="">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center">
+        <img class="" src="../img/branding-banner.png" alt="">
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center">
+        <img class="" src="../img/branding-banner.png" alt="">
+      </div>
+
+    </div>
+  </div>
+  
+  <div class="container " >
       <div class="row ">
         <div class="col-lg-12  m-auto cajas" id="diseno" style="display:none; " >
             <p id="#diseno">Construimos tu página desde cero, adaptada específicamente a las necesidades de tu negocio.</p>
