formulario de contacto a la izq

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,9 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contactanos!</a> 
+        <a class="nav-link" class="btn border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Contactanos!</a>
+
+        </a> 
       </li>
     </ul>
    
