--- a/src/contact.html
+++ b/src/contact.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light navMio">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
   <a class="navbar-brand" href="index.html">
     <img class="navlogo" src="../img/sghorizontal.png"    alt="sgw Logo" > 
   </a>
@@ -30,7 +30,7 @@
     <span class="navbar-toggler-icon blanco"></span>
   </button>
   <div class="collapse navbar-collapse"  id="navbarNavDropdown">
-    <ul class="navbar-nav mx-auto">
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="#diseno" id="enlaceDiseno">Diseño Web</a>
       </li>
