--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon blanco"></span>
   </button>
-  <div class="collapse navbar-collapse"  id="navbarNavDropdown">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
+  <div class="collapse navbar-collapse  " style="justify-content: flex-end;" id="navbarNavDropdown">
+    <ul class="navbar-nav " style="margin-right: 0;">
+      <li class="nav-item active  ">
         <a class="nav-link" href="index.html" id="enlaceDiseno">Diseño Web</a>
       </li>
       </li>
@@ -55,12 +55,11 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" class="btn border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Contactanos!</a>
+        <a class="nav-link" class="btn border-0 bg-transparent" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Contactanos!</button>
 
         </a> 
       </li>
     </ul>
-   
   </div>
  
 </nav>
@@ -93,16 +92,22 @@
       </div>
       <div class="container-fluid d-flex justify-content-center align-items-center fondotecno">
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center tecno">
+          <div class="col-lg-2 col-md-8 col-sm-12 d-flex justify-content-center tecno">
             <img class=" " src="../img/brand.png" alt="">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center tecno">
+          <div class="col-lg-2 col-md-8 col-sm-12 d-flex justify-content-center tecno">
+            <img class="" src="../img/wordpress.png" alt="">
+          </div>
+          <div class="col-lg-2 col-md-8 col-sm-12 d-flex justify-content-center tecno">
             <img class="" src="../img/consultoria.png" alt="">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center tecno">
+          <div class="col-lg-2 col-md-8 col-sm-12 d-flex justify-content-center tecno">
             <img class="" src="../img/mantenimiento.png" alt="">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center tecno">
+          <div class="col-lg-2 col-md-8 col-sm-12 d-flex justify-content-center tecno">
+            <img class="" src="../img/tiendan.png" alt="">
+          </div>
+          <div class="col-lg-2 col-md-8 col-sm-12 d-flex justify-content-center tecno">
             <img class="" src="../img/desarrollo.png" alt="">
           </div>
     
